[gd_scene load_steps=63 format=2]

[ext_resource path="res://assets/Table.png" type="Texture" id=1]
[ext_resource path="res://assets/14.png" type="Texture" id=2]
[ext_resource path="res://assets/5.png" type="Texture" id=3]
[ext_resource path="res://assets/9.png" type="Texture" id=4]
[ext_resource path="res://assets/10.png" type="Texture" id=5]
[ext_resource path="res://assets/cue_ball.png" type="Texture" id=6]
[ext_resource path="res://assets/4.png" type="Texture" id=7]
[ext_resource path="res://assets/6.png" type="Texture" id=8]
[ext_resource path="res://assets/1.png" type="Texture" id=9]
[ext_resource path="res://assets/13.png" type="Texture" id=10]
[ext_resource path="res://assets/11.png" type="Texture" id=11]
[ext_resource path="res://assets/2.png" type="Texture" id=12]
[ext_resource path="res://assets/12.png" type="Texture" id=13]
[ext_resource path="res://assets/8.png" type="Texture" id=14]
[ext_resource path="res://assets/15.png" type="Texture" id=15]
[ext_resource path="res://assets/Cue.png" type="Texture" id=16]
[ext_resource path="res://assets/3.png" type="Texture" id=17]
[ext_resource path="res://assets/7.png" type="Texture" id=18]
[ext_resource path="res://scripts/tela_sinuca.gd" type="Script" id=19]
[ext_resource path="res://scripts/bola1.gd" type="Script" id=20]
[ext_resource path="res://scripts/bola8.gd" type="Script" id=21]
[ext_resource path="res://scripts/bola9.gd" type="Script" id=22]
[ext_resource path="res://scripts/bola10.gd" type="Script" id=23]
[ext_resource path="res://scripts/bola15.gd" type="Script" id=24]
[ext_resource path="res://scripts/bola11.gd" type="Script" id=25]
[ext_resource path="res://scripts/bola5.gd" type="Script" id=26]
[ext_resource path="res://scripts/bola7.gd" type="Script" id=27]
[ext_resource path="res://scripts/bola13.gd" type="Script" id=28]
[ext_resource path="res://scripts/bola14.gd" type="Script" id=29]
[ext_resource path="res://scripts/bola4.gd" type="Script" id=30]
[ext_resource path="res://scripts/bola6.gd" type="Script" id=31]
[ext_resource path="res://scripts/bola12.gd" type="Script" id=32]
[ext_resource path="res://scripts/taco.gd" type="Script" id=33]
[ext_resource path="res://scripts/bola2.gd" type="Script" id=34]
[ext_resource path="res://scripts/bola3.gd" type="Script" id=35]
[ext_resource path="res://fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=36]

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 36 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 36 )

[sub_resource type="DynamicFont" id=25]
size = 25
font_data = ExtResource( 36 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 0.466667 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="CircleShape2D" id=17]
radius = 36.0

[sub_resource type="CircleShape2D" id=18]
radius = 35.0571

[sub_resource type="CircleShape2D" id=19]
radius = 35.0143

[sub_resource type="CircleShape2D" id=20]
radius = 35.0

[sub_resource type="CircleShape2D" id=21]
radius = 29.0172

[sub_resource type="CircleShape2D" id=22]
radius = 29.0

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CircleShape2D" id=3]
radius = 20.025

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[sub_resource type="CircleShape2D" id=5]
radius = 20.0

[sub_resource type="CircleShape2D" id=6]
radius = 20.0998

[sub_resource type="CircleShape2D" id=7]
radius = 20.025

[sub_resource type="CircleShape2D" id=8]
radius = 20.0

[sub_resource type="CircleShape2D" id=9]
radius = 20.025

[sub_resource type="CircleShape2D" id=10]
radius = 20.0

[sub_resource type="CircleShape2D" id=11]
radius = 20.0

[sub_resource type="CircleShape2D" id=12]
radius = 20.0

[sub_resource type="CircleShape2D" id=13]
radius = 20.025

[sub_resource type="CircleShape2D" id=14]
radius = 20.0

[sub_resource type="CircleShape2D" id=15]
radius = 20.025

[sub_resource type="CircleShape2D" id=16]
radius = 20.025

[node name="tela_sinuca" type="Node2D"]
position = Vector2( 685, 386 )
script = ExtResource( 19 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 388, 256 )
current = true
zoom = Vector2( 1.8, 1.8 )

[node name="jogador1" type="Label" parent="."]
margin_left = 31.0
margin_top = -205.0
margin_right = 102.0
margin_bottom = -186.0
rect_scale = Vector2( 3.24, 3.24 )
rect_pivot_offset = Vector2( 36.1226, 3.67323 )
custom_fonts/font = SubResource( 23 )
text = "Jogador 1"

[node name="jogador2" type="Label" parent="."]
margin_left = 653.0
margin_top = -192.0
margin_right = 724.0
margin_bottom = -173.0
rect_scale = Vector2( 3.24, 3.24 )
rect_pivot_offset = Vector2( 37.963, 7.09877 )
custom_fonts/font = SubResource( 24 )
text = "Jogador 2"

[node name="pontuação_jogador1" type="Label" parent="."]
margin_left = -50.0
margin_top = -146.0
margin_right = 77.0
margin_bottom = -95.0
custom_fonts/font = SubResource( 25 )
text = "Pontuação: 0
"

[node name="exibicao_bolas" type="Panel" parent="."]
margin_left = 1071.0
margin_top = -101.0
margin_right = 1221.0
margin_bottom = 587.0
custom_styles/panel = SubResource( 26 )

[node name="bola1" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 36 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="exibicao_bolas/bola1"]
margin_left = 30.0
margin_top = -7.0
margin_right = 98.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "hidrogênio"

[node name="bola2" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 80 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="exibicao_bolas/bola2"]
margin_left = 30.0
margin_top = -8.0
margin_right = 70.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "hélio"

[node name="bola3" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 123 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="exibicao_bolas/bola3"]
margin_left = 30.0
margin_top = -7.0
margin_right = 92.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "magnésio"

[node name="bola4" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 167 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="exibicao_bolas/bola4"]
margin_left = 30.0
margin_top = -8.0
margin_right = 74.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "neônio"

[node name="bola5" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 210 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="exibicao_bolas/bola5"]
margin_left = 30.0
margin_top = -10.0
margin_right = 70.0
margin_bottom = 4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "cálcio"

[node name="bola6" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 253 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="exibicao_bolas/bola6"]
margin_left = 30.0
margin_top = -9.0
margin_right = 77.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "argônio"

[node name="bola7" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 296 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="exibicao_bolas/bola7"]
margin_left = 30.0
margin_top = -8.0
margin_right = 70.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "bário"

[node name="bola8" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 340 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="exibicao_bolas/bola8"]
margin_left = 30.0
margin_top = -9.0
margin_right = 87.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "criptônio"

[node name="bola9" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 384 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="exibicao_bolas/bola9"]
margin_left = 30.0
margin_top = -7.0
margin_right = 70.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "cloro"

[node name="bola10" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 429 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="exibicao_bolas/bola10"]
margin_left = 30.0
margin_top = -8.0
margin_right = 81.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "xenônio"

[node name="bola11" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 473 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="exibicao_bolas/bola11"]
margin_left = 30.0
margin_top = -8.0
margin_right = 70.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "prata"

[node name="bola12" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 519 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="exibicao_bolas/bola12"]
margin_left = 30.0
margin_top = -8.0
margin_right = 74.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "fósforo"

[node name="bola13" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 564 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="exibicao_bolas/bola13"]
margin_left = 30.0
margin_top = -8.0
margin_right = 78.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "radônio"

[node name="bola14" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 39, 608 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="exibicao_bolas/bola14"]
margin_left = 30.0
margin_top = -7.0
margin_right = 84.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "oxigênio"

[node name="bola15" type="Sprite" parent="exibicao_bolas"]
position = Vector2( 38, 652 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="exibicao_bolas/bola15"]
margin_left = 31.0
margin_top = -7.0
margin_right = 71.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ferro"

[node name="mesa_de_sinuca" type="StaticBody2D" parent="."]
position = Vector2( 388, 342 )

[node name="Sprite" type="Sprite" parent="mesa_de_sinuca"]
texture = ExtResource( 1 )

[node name="lateral_direita" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
polygon = PoolVector2Array( -639, -267, -600, -267, -580, -244, -580, 246, -599, 267, -639, 268 )

[node name="lateral_superior" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
polygon = PoolVector2Array( -558, -352, -558, -309, -536, -288, -35.75, -288, -30, -309, -31, -317, -31, -324, -29, -332, -24, -340, -18, -345, -10, -349, 0, -350, 9, -349, 19, -345, 26, -338, 29, -332, 31, -324, 31, -316, 30, -309, 36, -288, 536, -288, 557, -309, 557, -352 )

[node name="lateral_esquerda" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
polygon = PoolVector2Array( 638, -266, 598, -266, 578, -243, 579, 246, 597, 266, 638, 267 )

[node name="lateral_inferior" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
position = Vector2( -2, 2 )
rotation = 3.14159
polygon = PoolVector2Array( -558, -352, -558, -309, -536, -288, -37.9993, -287, -31.9992, -309, -33.9992, -316, -32.9992, -326, -29.9992, -333, -25, -340, -18.9991, -345, -10, -350, 0.000887394, -350, 10.0009, -348, 18.0009, -343, 24.0009, -337, 28.0008, -329, 30, -323, 30.0008, -315, 28.0008, -307, 34.0007, -288, 536, -288, 557, -309, 557, -352 )

[node name="buraco_superior_direito" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
polygon = PoolVector2Array( -639, -268, -638, -333, -634, -341, -628, -347, -618, -352, -559, -352, -558, -312, -563, -326, -568, -333, -578, -341, -589, -344, -599, -344, -607, -343, -615, -339, -620, -335, -626, -329, -631, -320, -633, -312, -633, -303, -631, -292, -627, -284, -622, -277, -614, -272, -600, -268 )

[node name="buraco_superior_esquerdo" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
position = Vector2( 287, 287 )
rotation = 1.5708
polygon = PoolVector2Array( -639, -270, -640, -328, -635, -340, -627, -348, -618, -351, -553, -351, -554, -311, -560, -327, -566, -335, -576, -342, -588, -346, -599, -345, -607, -343, -615, -339, -620, -335, -625, -329, -629, -320, -630, -312, -630, -303, -628, -294, -624, -287, -618, -280, -611, -275, -598, -271 )

[node name="buraco_inferior_esquerdo" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
position = Vector2( 3, 0 )
rotation = 3.14159
polygon = PoolVector2Array( -635, -268, -635, -331, -632, -339, -627, -345, -618, -352, -553, -352, -554, -311, -561, -327, -567, -334, -576, -341, -588, -343, -599, -343, -607, -341, -614, -337, -620, -332, -625, -326, -628, -319, -630, -312, -630, -303, -628, -294, -624, -286, -619, -279, -611, -273, -595, -267 )

[node name="buraco_inferior_direito" type="CollisionPolygon2D" parent="mesa_de_sinuca"]
position = Vector2( -289, -290 )
rotation = -1.5708
polygon = PoolVector2Array( -642, -270, -642, -333, -639, -339, -632, -346, -626, -350, -558, -350, -558, -311, -563, -326, -569, -333, -579, -341, -589, -343, -599, -344, -607, -343, -615, -339, -620, -336, -626, -330, -631, -320, -633, -312, -634, -303, -632, -293, -627, -284, -621, -278, -614, -273, -605, -270 )

[node name="buraco1" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco1"]
position = Vector2( -595, -306 )
shape = SubResource( 17 )

[node name="buraco2" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco2"]
position = Vector2( -595, 306 )
shape = SubResource( 18 )

[node name="buraco3" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco3"]
position = Vector2( 595, -306 )
shape = SubResource( 19 )

[node name="buraco4" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco4"]
position = Vector2( 595, 306 )
shape = SubResource( 20 )

[node name="buraco5" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco5"]
position = Vector2( 0, -319 )
shape = SubResource( 21 )

[node name="buraco6" type="Area2D" parent="mesa_de_sinuca"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_de_sinuca/buraco6"]
position = Vector2( 0, 320 )
shape = SubResource( 22 )

[node name="taco" type="KinematicBody2D" parent="."]
position = Vector2( 388, 342 )
script = ExtResource( 33 )

[node name="Sprite" type="Sprite" parent="taco"]
position = Vector2( -0.5, 356.7 )
texture = ExtResource( 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="taco"]
position = Vector2( -0.5, 357.7 )
polygon = PoolVector2Array( -5, -319, -2, -320, 2, -320, 5, -319, 6, -316, 6, -311, -6, -311, -6, -316 )

[node name="bola_branca" type="RigidBody2D" parent="."]
position = Vector2( 388, 342 )
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="bola_branca"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola_branca"]
shape = SubResource( 1 )

[node name="bola1" type="RigidBody2D" parent="."]
position = Vector2( 673, 337 )
gravity_scale = 0.0
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="bola1"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola1"]
shape = SubResource( 2 )

[node name="bola2" type="RigidBody2D" parent="."]
position = Vector2( 711, 359 )
gravity_scale = 0.0
script = ExtResource( 34 )

[node name="Sprite" type="Sprite" parent="bola2"]
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola2"]
shape = SubResource( 3 )

[node name="bola3" type="RigidBody2D" parent="."]
position = Vector2( 711, 316 )
gravity_scale = 0.0
script = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="bola3"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola3"]
shape = SubResource( 4 )

[node name="bola4" type="RigidBody2D" parent="."]
position = Vector2( 751, 379 )
gravity_scale = 0.0
script = ExtResource( 30 )

[node name="Sprite" type="Sprite" parent="bola4"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola4"]
shape = SubResource( 5 )

[node name="bola5" type="RigidBody2D" parent="."]
position = Vector2( 751, 336 )
gravity_scale = 0.0
script = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="bola5"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola5"]
shape = SubResource( 6 )

[node name="bola6" type="RigidBody2D" parent="."]
position = Vector2( 751, 293 )
gravity_scale = 0.0
script = ExtResource( 31 )

[node name="Sprite" type="Sprite" parent="bola6"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola6"]
shape = SubResource( 7 )

[node name="bola7" type="RigidBody2D" parent="."]
position = Vector2( 791, 399 )
gravity_scale = 0.0
script = ExtResource( 27 )

[node name="Sprite" type="Sprite" parent="bola7"]
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola7"]
shape = SubResource( 8 )

[node name="bola8" type="RigidBody2D" parent="."]
position = Vector2( 791, 356 )
gravity_scale = 0.0
script = ExtResource( 21 )

[node name="Sprite" type="Sprite" parent="bola8"]
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola8"]
shape = SubResource( 9 )

[node name="bola9" type="RigidBody2D" parent="."]
position = Vector2( 791, 313 )
gravity_scale = 0.0
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="bola9"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola9"]
shape = SubResource( 10 )

[node name="bola10" type="RigidBody2D" parent="."]
position = Vector2( 791, 270 )
gravity_scale = 0.0
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="bola10"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola10"]
shape = SubResource( 11 )

[node name="bola11" type="RigidBody2D" parent="."]
position = Vector2( 830, 422 )
gravity_scale = 0.0
script = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="bola11"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola11"]
shape = SubResource( 12 )

[node name="bola12" type="RigidBody2D" parent="."]
position = Vector2( 830, 379 )
gravity_scale = 0.0
script = ExtResource( 32 )

[node name="Sprite" type="Sprite" parent="bola12"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola12"]
shape = SubResource( 13 )

[node name="bola13" type="RigidBody2D" parent="."]
position = Vector2( 830, 336 )
gravity_scale = 0.0
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="bola13"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola13"]
shape = SubResource( 14 )

[node name="bola14" type="RigidBody2D" parent="."]
position = Vector2( 830, 293 )
gravity_scale = 0.0
script = ExtResource( 29 )

[node name="Sprite" type="Sprite" parent="bola14"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola14"]
shape = SubResource( 15 )

[node name="bola15" type="RigidBody2D" parent="."]
position = Vector2( 830, 250 )
gravity_scale = 0.0
script = ExtResource( 24 )

[node name="Sprite" type="Sprite" parent="bola15"]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola15"]
shape = SubResource( 16 )

[connection signal="body_entered" from="mesa_de_sinuca/buraco1" to="." method="_on_buraco1_body_entered"]
[connection signal="body_entered" from="mesa_de_sinuca/buraco2" to="." method="_on_buraco2_body_entered"]
[connection signal="body_entered" from="mesa_de_sinuca/buraco3" to="." method="_on_buraco3_body_entered"]
[connection signal="body_entered" from="mesa_de_sinuca/buraco4" to="." method="_on_buraco4_body_entered"]
[connection signal="body_entered" from="mesa_de_sinuca/buraco5" to="." method="_on_buraco5_body_entered"]
[connection signal="body_entered" from="mesa_de_sinuca/buraco6" to="." method="_on_buraco6_body_entered"]
