extends Node2D

signal bola1_no_buraco
signal bola2_no_buraco
signal bola3_no_buraco
signal bola4_no_buraco
signal bola5_no_buraco
signal bola6_no_buraco
signal bola7_no_buraco
signal bola8_no_buraco
signal bola9_no_buraco
signal bola10_no_buraco
signal bola11_no_buraco
signal bola12_no_buraco
signal bola13_no_buraco
signal bola14_no_buraco
signal bola15_no_buraco

# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func _on_buraco1_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):

		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")


func _on_buraco2_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):
		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")


func _on_buraco3_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):
		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")


func _on_buraco4_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):
		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")


func _on_buraco5_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):
		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")


func _on_buraco6_body_entered(body):
	if(body.name != "bola1"):
		body.queue_free()
		emit_signal("bola1_no_buraco")
	
	elif(body.name != "bola2"):
		body.queue_free()
		emit_signal("bola2_no_buraco")
	
	elif(body.name != "bola3"):
		body.queue_free()
		emit_signal("bola3_no_buraco")
	
	elif(body.name != "bola4"):
		body.queue_free()
		emit_signal("bola4_no_buraco")
	
	elif(body.name != "bola5"):
		body.queue_free()
		emit_signal("bola5_no_buraco")
	
	elif(body.name != "bola6"):
		body.queue_free()
		emit_signal("bola6_no_buraco")
	
	elif(body.name != "bola7"):
		body.queue_free()
		emit_signal("bola7_no_buraco")
	
	elif(body.name != "bola8"):
		body.queue_free()
		emit_signal("bola8_no_buraco")
	
	elif(body.name != "bola9"):
		body.queue_free()
		emit_signal("bola9_no_buraco")
	
	elif(body.name != "bola10"):
		body.queue_free()
		emit_signal("bola10_no_buraco")
	
	elif(body.name != "bola11"):
		body.queue_free()
		emit_signal("bola11_no_buraco")
	
	elif(body.name != "bola12"):
		body.queue_free()
		emit_signal("bola12_no_buraco")
	
	elif(body.name != "bola13"):
		body.queue_free()
		emit_signal("bola13_no_buraco")
	
	elif(body.name != "bola14"):
		body.queue_free()
		emit_signal("bola14_no_buraco")
	
	elif(body.name != "bola15"):
		body.queue_free()
		emit_signal("bola15_no_buraco")
